fix(locale): retrive fix

--- a/locales/it.json
+++ b/locales/it.json
@@ -30,7 +30,7 @@
     "label_label": "Etichetta",
     "label_group": "Gruppo",
     "update_vehicle_values": "Aggiorna valori veicolo",
-    "retrive": "Recupera",
+    "retrive": "Ritira",
     "manage_vehicle": "Gestisci veicolo",
     "vehicle_list": "%s - %s - Veicoli",
     "all_vehicles": "Tutti i veicoli",
